--- a/index.html
+++ b/index.html
@@ -20,23 +20,27 @@
   <div>
     <h3>Click the button below to book the parking slot</h3>
     <div>
-      <button class="lightButton" id="slot-1">Slot 1
-        <h1 class="slotstatus1"></h1>
+      <button class="lightButton" id="slot-1">
+        Slot 1
+        <p id="slot1"></p>
       </button>
     </div>
     <div>
-      <button class="lightButton" id="slot-2">Slot 2
-        <h1 class="slotstatus2"></h1>
+      <button class="lightButton" id="slot-2">
+        Slot 2
+        <p id="slot2"></p>
       </button>
     </div>
     <div>
-      <button class="lightButton" id="slot-2">Slot 3
-        <h1 class="slotstatus3"></h1>
+      <button class="lightButton" id="slot-2">
+        Slot 3
+        <p id="slot3" ></p>
       </button>
     </div>
     <div>
-      <button class="lightButton" id="slot-4">Slot 4
-        <h1 class="slotstatus4"></h1>
+      <button class="lightButton" id="slot-4">
+        Slot 4
+        <p id="slot4"></p>
       </button>
     </div>
     <script src="script.js"></script>
